syntax = "proto3";

package io.harness.delegate;

option java_multiple_files = true;

message AccountId {
  string id = 1;
}